unpackaged/main/default/objects/BatchLeadConvertErrors__c/fields/AsyncApexJobId__c.field-meta.xml
<CustomField>
        <fullName>AsyncApexJobId__c</fullName>
        <label>AsyncApexJobId</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>