unpackaged/main/default/objects/BatchLeadConvertErrors__c/fields/Records__c.field-meta.xml
<CustomField>
        <fullName>Records__c</fullName>
        <label>Records</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>