unpackaged/main/default/objects/BatchLeadConvertErrors__c/fields/StackTrace__c.field-meta.xml
<CustomField>
        <fullName>StackTrace__c</fullName>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>